# CPP_Template

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  conanfile.txt  docker-compose.yml
.github/: requirements.sh
.github/workflows/: build.yml  build_and_test.yml  tests.yml
Sources/: Main  Main.cpp
Tests/: Tests.cmake  Tests.cpp
